thcrap2nix/src/bindings.rs

#[test]
fn bindgen_test_layout_patch_t() {
    const UNINIT: ::std::mem::MaybeUninit<patch_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<patch_t>(),
        60usize,
        concat!("Size of: ", stringify!(patch_t))
    );
    assert_eq!(
        ::std::mem::align_of::<patch_t>(),
        4usize,
        concat!("Alignment of ", stringify!(patch_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).archive) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(archive)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).archive_length) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(archive_length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).version) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).title) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(title)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).servers) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(servers)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dependencies) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(dependencies)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fonts) as usize - ptr as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(fonts)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).ignore) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(ignore)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).update) as usize - ptr as usize },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(update)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).level) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(level)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).config) as usize - ptr as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(config)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).motd) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(motd)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).motd_title) as usize - ptr as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(motd_title)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).motd_type) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(patch_t),
            "::",
            stringify!(motd_type)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct repo_patch_t {
    pub patch_id: *mut ::std::os::raw::c_char,
    pub title: *mut ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_repo_patch_t() {
    const UNINIT: ::std::mem::MaybeUninit<repo_patch_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<repo_patch_t>(),
        8usize,
        concat!("Size of: ", stringify!(repo_patch_t))
    );
    assert_eq!(
        ::std::mem::align_of::<repo_patch_t>(),
        4usize,
        concat!("Alignment of ", stringify!(repo_patch_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patch_id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_patch_t),
            "::",
            stringify!(patch_id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).title) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_patch_t),
            "::",
            stringify!(title)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct repo_t {
    pub id: *mut ::std::os::raw::c_char,
    pub title: *mut ::std::os::raw::c_char,
    pub contact: *mut ::std::os::raw::c_char,
    pub servers: *mut *mut ::std::os::raw::c_char,
    pub neighbors: *mut *mut ::std::os::raw::c_char,
    pub patches: *mut repo_patch_t,
}
#[test]
fn bindgen_test_layout_repo_t() {
    const UNINIT: ::std::mem::MaybeUninit<repo_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<repo_t>(),
        24usize,
        concat!("Size of: ", stringify!(repo_t))
    );
    assert_eq!(
        ::std::mem::align_of::<repo_t>(),
        4usize,
        concat!("Alignment of ", stringify!(repo_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).id) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_t),
            "::",
            stringify!(id)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).title) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_t),
            "::",
            stringify!(title)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).contact) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_t),
            "::",
            stringify!(contact)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).servers) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_t),
            "::",
            stringify!(servers)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).neighbors) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_t),
            "::",
            stringify!(neighbors)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).patches) as usize - ptr as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(repo_t),
            "::",
            stringify!(patches)
        )
    );
}
extern "C" {
    pub fn RepoGetLocalFN(id: *const ::std::os::raw::c_char) -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn RepoLocalNext(hFind: *mut HANDLE) -> *mut repo_t;
}
extern "C" {
    pub fn RepoLoad() -> *mut *mut repo_t;
}
extern "C" {
    pub fn RepoWrite(repo: *const repo_t) -> bool;
}
extern "C" {
    pub fn RepoFree(repo: *mut repo_t);
}
pub const get_status_t_GET_DOWNLOADING: get_status_t = 0;
pub const get_status_t_GET_OK: get_status_t = 1;
pub const get_status_t_GET_CLIENT_ERROR: get_status_t = 2;
pub const get_status_t_GET_CRC32_ERROR: get_status_t = 3;
pub const get_status_t_GET_SERVER_ERROR: get_status_t = 4;
pub const get_status_t_GET_CANCELLED: get_status_t = 5;
pub const get_status_t_GET_SYSTEM_ERROR: get_status_t = 6;
pub type get_status_t = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct progress_callback_status_t {
    pub patch: *const patch_t,
    pub fn_: *const ::std::os::raw::c_char,
    pub url: *const ::std::os::raw::c_char,
    pub status: get_status_t,
    pub error: *const ::std::os::raw::c_char,
    pub file_progress: usize,
    pub file_size: usize,
    pub nb_files_downloaded: usize,
    pub nb_files_total: usize,
}
